refactor(): default name

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -235,7 +235,7 @@
     "confirmCharacterButton": "Confirm Character"
   },
   "charName": {
-    "default": "Kukuxumusu",
+    "default": "Kukuxu",
     "lara": "Lara Croft",
     "legolas": "Legolas",
     "link": "Link"
