refactor(sonar): fix all TODO and refactor store and localstorage

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -4,7 +4,8 @@
     "achievements": "Achievements",
     "instructions": "Instructions",
     "newGame": "New Game",
-    "achievementsAlt": "Achievements"
+    "achievementsAlt": "Achievements",
+    "credits": "Credits"
   },
   "achievements": {
     "backToGame": "Back to Game",
