--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -4,7 +4,8 @@
     "achievements": "Logros",
     "instructions": "Instrucciones",
     "newGame": "Nueva partida",
-    "achievementsAlt": "Logros"
+    "achievementsAlt": "Logros",
+    "credits": "Creditos"
   },
   "achievements": {
     "backToGame": "Volver al juego",
